--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "homepage": "./",
   "version": "0.1.0",
   "private": true,
+  "description": "A Pomodoro timer application built with Electron and React",
+  "author": "Your Name",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "concurrently": "^9.1.2",
     "date-fns": "^4.1.0",
-    "electron": "^35.1.5",
     "electron-is-dev": "^3.0.1",
     "pomdoroelectron": "file:",
     "react": "^19.1.0",
@@ -19,7 +19,6 @@
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
     "uuid": "^11.1.0",
-    "wait-on": "^8.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -50,10 +49,10 @@
     ]
   },
   "devDependencies": {
-    "concurrently": "^8.0.1",
+    "concurrently": "^9.1.2",
     "cross-env": "^7.0.3",
-    "electron": "^23.0.0",
+    "electron": "^35.1.5",
     "electron-builder": "^24.4.0",
-    "wait-on": "^7.0.1"
+    "wait-on": "^8.0.3"
   }
 }
